# apps/api/src/modules/reporting/reporting.module.ts
@@ -1,0 +1,12 @@
+import { Module } from '@nestjs/common';
+import { TenancyModule } from '../tenancy/tenancy.module';
+import { InventoryModule } from '../inventory/inventory.module';
+import { ReportingController } from './reporting.controller';
+import { ReportingService } from './reporting.service';
+
+@Module({
+  imports: [TenancyModule, InventoryModule],
+  controllers: [ReportingController],
+  providers: [ReportingService],
+})
+export class ReportingModule {}
